fix (config):修复保存参数
-EntityType的问题